--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
    <head>
       <title>Redirecting...</title>
+      <meta http-equiv="refresh" content="0; url=http://example.com/" />
    </head>
    <body>
+      <p><a href="http://example.com/">Redirect</a></p>
    </body>
 </html>
