--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
    <head>
       <title>Redirecting...</title>
-      <meta http-equiv="refresh" content="0; url=http://example.com/" />
+      <meta http-equiv="refresh" content="0; url=/pages"/>
    </head>
    <body>
-      <p><a href="http://example.com/">Redirect</a></p>
+      <p><a href="/pages">Redirect</a></p>
    </body>
 </html>
