--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello 🙃
+Hello 🙃<br>
+This page is being renovated<br>
+<h3>Popular Links<h3>
+<ul>
+   <li><a href="/2048">Meme 2048</a></li>
+   <li><a href="#">Project Zimbabwe</a> - Temporarily down</li>
+</ul>
