--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ This page is being renovated<br>
 <h4>
 <ul>
    <li><a href="/2048">Meme 2048</a></li>
-   <li><a href="#">Project Zimbabwe</a> - Temporarily down</li>
+   <li style="color: red;"><a href="#">Project Zimbabwe</a> - Temporarily down</li>
 </ul>
 </h4>
