--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 color: aliceblue;
                 text-align: center;
                 margin-top: 10px;
-                background-color: blueviolet;
+                background-color: #f3f3f3;
                 margin-left: 10%;
                 margin-right: 10%;
                 border-radius: 10px;
