--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 font-size: 1em;
             }
             #pl{
-                color: aliceblue;
+                color: black;
                 text-align: center;
                 margin-top: 10px;
                 background-color: #f3f3f3;
