--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 color: black;
                 text-align: center;
                 margin-top: 10px;
-                background-color: #f3f3f3;
+                background-color: white;
                 margin-left: 10%;
                 margin-right: 10%;
-                border-radius: 10px;
+                border-radius: 15px;
                 box-shadow: 5px 5px 10px #888888;
             }
             #pl ul{
