--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             }
         </style>
         <div id="pl">
-            Hello<br>
-            This page is being renovated<br>
+            <h1>title</h1>
+            <hr>
+            This page is being renovated
             <h3>Popular Links</h3>
-            <h4>
             <ul>
                <li><a href="/2048">Meme 2048</a></li>
                <li style="color: red;"><a href="#">Project Zimbabwe</a> - Temporarily down</li>
