--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </script>
         <div id="jumbotron">
             <div class="contain">
-                <h1>DusterTheFirst</h1>
+                <h1 class="title">DusterTheFirst</h1>
                 <div class="jitem"><a href="#about">About Me</a></div>
             </div>
         </div>
