--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <style>
             #pl h1, h2, h3 ,h4, h5{
                 color: black;
+                margin: .5em;
             }
             #pl{
                 color: black;
