--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <input type="email" name="email" placeholder="Your email">
   <textarea name="message" placeholder="Your message"></textarea>
   <input type="hidden" name="_subject" value="GITHUB SITE TICKET!" />
-  <input type="hidden" name="_next" value="dusterthefirst.github.io/contact.html#thank" />
+  <input type="hidden" name="_next" value="http://dusterthefirst.github.io/contact.html#thank" />
   <input type="text" name="_gotcha" style="display:none" />
   <button type="submit">Send</button>
 </form>
