--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="res/global/styles.css">
+        <link rel="stylesheet" type="text/css" href="res/private/feed.css">
         <title>DusterTheFirst</title>
         <script src="/res/global/jquery-3.1.1.js"></script>
     </head>
@@ -20,40 +21,18 @@
                 <div class="jitem"><a href="#about">About Me</a></div>
             </div>
         </div>
-        <div id="feed">Feed Here</div>
-        <style>
-            #pl h1, h2, h3 ,h4, h5{
-                color: black;
-                margin: .5em;
-            }
-            #pl{
-                color: black;
-                text-align: center;
-                margin-top: 10px;
-                background-color: white;
-                margin-left: 10%;
-                margin-right: 10%;
-                border-radius: 2px;
-                box-shadow: 2px 2px 5px #888888;
-            }
-            #pl ul{
-                list-style: none;
-            }
-            #pl ul li a{
-                text-decoration: none;
-                color: cornflowerblue;
-            }
-        </style>
-        <div id="pl">
-            <h1>title</h1>
+        <div id="feed">
+            <br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts<br>butts
+        </div>
+        <script src="res/private/feed.js"></script>
+        <div class="feeditem hid">
+            <a class="link" href="#">
+                <b><div class="title"></div></b>
+                <i><div class="desc"></div></i>
+            </a>
             <hr>
-            This page is being renovated
-            <h3>Popular Links</h3>
-            <ul>
-               <li><a href="/2048">Meme 2048</a></li>
-               <li style="color: red;"><a href="#">Project Zimbabwe</a> - Temporarily down</li>
-            </ul>
-            </h4>
+            <div class="feedcontent"></div>
+            <i><div class="feeddate"></div></i>
         </div>
     </body>
 </html>
