--- a/creations.html
+++ b/creations.html
@@ -17,7 +17,7 @@
 <!--        JUMBOTRON-->
         <div id="minitron">
             <div class="contain">
-                <div class="title">Contact Me</div>
+                <div class="title">Things I Made</div>
             </div>
         </div>
 <!--        /JUMBOTRON-->
