--- a/games.html
+++ b/games.html
@@ -17,12 +17,19 @@
 <!--        JUMBOTRON-->
         <div id="minitron">
             <div class="contain">
-                <div class="title">Contact Me</div>
+                <div class="title">Fun Things I Made</div>
             </div>
         </div>
 <!--        /JUMBOTRON-->
 <!--        CONTENT-->
-        
+        <style>
+            
+        </style>
+        <div class="game">
+            <div class="title">Meme 2048</div>
+            <a href="#" class="address"></a>
+            <div class="desc"></div>
+        </div>
 <!--        /CONTENT-->
     </body>
 </html>
