--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="res/global/styles.css">
+        <link rel="shortcut icon" type="image/png" href="/res/media/images/favicon.png"/>
         <title>DusterTheFirst</title>
         <script src="/res/global/jquery-3.1.1.js"></script>
     </head>
@@ -17,15 +18,14 @@
         <div id="jumbotron">
             <div class="contain">
                 <h1 class="title">DusterTheFirst</h1>
-                <a href="#about">About Me</a>
+                <a href="/about.html">About Me</a>
             </div>
         </div>
 <!--        /JUMBOTRON-->
 <!--        FEED-->
         <div id="feed"></div>
         <script src="res/private/feed.js"></script>
-        <link rel="stylesheet" type="text/css" href="res/private/feed.css">
-<!--        ADD FEED-->
+<!--        /FEED-->
         
     </body>
 </html>
