--- a/creations.html
+++ b/creations.html
@@ -22,7 +22,31 @@
         </div>
 <!--        /JUMBOTRON-->
 <!--        CONTENT-->
-        
+        <link rel="stylesheet" type="text/css" href="/res/private/feed.css">
+        <div class="feeditem">
+            <a class="link" href="https://github.com/DusterTheFirst/Spigot-GUI">
+                <b><div class="title">Spigot GUI</div></b>
+                <i><div class="desc">GitHub > DusterTheFirst > Spigot-GUI</div></i>
+            </a>
+            <hr>
+            <div class="feedcontent">An Advanced GUI For Minecraft Spigot</div>
+        </div>
+        <div class="feeditem">
+            <a class="link" href="https://github.com/Dust-Incorperated/TEA">
+                <b><div class="title">Spigot TEA</div></b>
+                <i><div class="desc">GitHub > DusterTheFirst > TEA</div></i>
+            </a>
+            <hr>
+            <div class="feedcontent">A Lua Based Programming Language For Spigot</div>
+        </div>
+        <div class="feeditem">
+            <a class="link" href="https://github.com/DusterTheFirst/HTML-websiteTemplates">
+                <b><div class="title">HTML Website Templates</div></b>
+                <i><div class="desc">GitHub > DusterTheFirst > HTML-websiteTemplates</div></i>
+            </a>
+            <hr>
+            <div class="feedcontent">HTML Website Templates Licensed Under The MIT License And Free To Use</div>
+        </div>
 <!--        /CONTENT-->
     </body>
 </html>
