--- a/games.html
+++ b/games.html
@@ -22,13 +22,14 @@
         </div>
 <!--        /JUMBOTRON-->
 <!--        CONTENT-->
-        <style>
-            
-        </style>
-        <div class="game">
-            <div class="title">Meme 2048</div>
-            <a href="#" class="address"></a>
-            <div class="desc"></div>
+        <link rel="stylesheet" type="text/css" href="/res/private/feed.css">
+        <div class="feeditem">
+            <a class="link" href="/2048">
+                <b><div class="title">Meme 2048</div></b>
+                <i><div class="desc">DusterTheFirst > 2048</div></i>
+            </a>
+            <hr>
+            <div class="feedcontent">Meme Clone Of 2048 Made By Me And A Few Other People</div>
         </div>
 <!--        /CONTENT-->
     </body>
