--- a/about.html
+++ b/about.html
@@ -17,12 +17,36 @@
 <!--        JUMBOTRON-->
         <div id="minitron">
             <div class="contain">
-                <div class="title">About Me</div>
+                <div class="title">About</div>
             </div>
         </div>
 <!--        /JUMBOTRON-->
 <!--        CONTENT-->
-        
+        <link rel="stylesheet" type="text/css" href="/res/private/feed.css">
+        <div class="feeditem">
+            <a class="link">
+                <b><div class="title">This Page</div></b>
+            </a>
+            <hr>
+            <div class="feedcontent">I Developed This Page To Practice HTML, CSS and JS/<br>
+            The Images On The Jumbotrons Were All Made By Martin Driver<br>
+            I Wrote All Of The Code Except The JQuery Library.<br>
+            The Color Scheme Is Based Off Of Google Search Results On Mobile, Cuz Why Not.</div>
+        </div>
+        <div class="feeditem">
+            <a class="link">
+                <b><div class="title">Programming</div></b>
+            </a>
+            <hr>
+            <div class="feedcontent">I Am A Student Developer And I Program All Of My Programs Or Websites In My Free Time, I Am By No Means A Professional</div>
+        </div>
+        <div class="feeditem">
+            <a class="link">
+                <b><div class="title">Arts</div></b>
+            </a>
+            <hr>
+            <div class="feedcontent">Sometimes I Will Make A Piece Of "Art" Like A Song Or A Drawing.</div>
+        </div>
 <!--        /CONTENT-->
     </body>
 </html>
