--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,28 @@
         </div>
 <!--        /JUMBOTRON-->
 <!--        CONTENT-->
-        
+        <link rel="stylesheet" type="text/css" href="/res/private/feed.css">
+        <div class="feeditem">
+            <a class="link">
+                <b><div class="title">Email</div></b>
+            </a>
+            <hr>
+            <div class="feedcontent">Email Me At DusterTheFirst@gmail.com</div>
+        </div>
+        <div class="feeditem">
+            <a class="link">
+                <b><div class="title">Social Media</div></b>
+            </a>
+            <hr>
+            <div class="feedcontent">Mostly All Of My Social Meda Names Are Either @dusterthefirst or @dusterthesecond</div>
+        </div>
+        <div class="feeditem">
+            <a class="link">
+                <b><div class="title">Business Inquiries</div></b>
+            </a>
+            <hr>
+            <div class="feedcontent">Email Me At DusterTheFirst@outlook.com</div>
+        </div>
 <!--        /CONTENT-->
     </body>
 </html>
