--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             </div>
         </div>
 <!--        /JUMBOTRON-->
+        <!--CHRISTMAS-->
+        <script src="/res/private/counter.js"></script>
 <!--        FEED-->
         <div id="feed"></div>
         <script src="res/private/feed.js"></script>
