--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 <!--        /JUMBOTRON-->
         <!--CHRISTMAS-->
         <script src="/res/private/counter.js"></script>
+        <script>
+        
+        </script>
 <!--        FEED-->
         <div id="feed"></div>
         <script src="res/private/feed.js"></script>
