--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
 <!--        /JUMBOTRON-->
         <!--CHRISTMAS-->
         <script src="/res/private/counter.js"></script>
+        <link rel="stylesheet" type="text/css" href="/res/private/feed.css">
+<div class="feeditem">
+    <a class="link" href="#">
+        <b><div class="title">COUNTDOWN TO CHRISTMAS</div></b>
+    </a>
+    <hr>
+    <div class="feedcontent" id="counter">NULL</div>
+</div>
         <script>
         
         </script>
