--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <b><div class="title">COUNTDOWN TO CHRISTMAS</div></b>
     </a>
     <hr>
-    <div class="feedcontent" id="counter">NULL</div>
+    <div class="feedcontent" id="countdown">NULL</div>
 </div>
         <script>
-        
+           CountDownTimer('12/25/2016 0:00 AM', 'countdown');
         </script>
 <!--        FEED-->
         <div id="feed"></div>
