--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 </div>
         <script>
            CountDownTimer('12/25/2016 0:00 AM', 'countdown');
+                timer = setInterval(showRemaining, 1000);
         </script>
 <!--        FEED-->
         <div id="feed"></div>
