--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <b><div class="title">COUNTDOWN TO CHRISTMAS</div></b>
     </a>
     <hr>
-    <div class="feedcontent" id="countdown">NULL</div>
+    <div class="feedcontent" id="countdown">LOADING...</div>
 </div>
         <script>
            CountDownTimer('12/25/2016 0:00 AM', 'countdown');
