--- a/creations.html
+++ b/creations.html
@@ -27,6 +27,7 @@
             
         </div>
         <script src="res/private/getCreations.js"></script>
+        <a href="https://thedustyard.github.io"><u>See More</u></a>
 <!--        /CONTENT-->
     </body>
 </html>
