--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                 <b><div class="title">Email</div></b>
             </a>
             <hr>
-            <div class="feedcontent">Email Me At DusterTheFirst @gmail.com</div>
+            <div class="feedcontent">Email Me At DusterTheFirst@gmail.com</div>
         </div>
         <div class="feeditem">
             <a class="link">
@@ -42,7 +42,14 @@
                 <b><div class="title">Business Inquiries</div></b>
             </a>
             <hr>
-            <div class="feedcontent">Email Me At DusterTheFirst @outlook.com</div>
+            <div class="feedcontent">Email Me At DusterTheFirst@outlook.com</div>
+        </div>
+        <div class="feeditem">
+            <a class="link">
+                <b><div class="title">Programming Advice Or Assistance</div></b>
+            </a>
+            <hr>
+            <div class="feedcontent">Email Me At DusterTheFirst@outlook.com or Skype Me At DusterTheFirst</div>
         </div>
 <!--        /CONTENT-->
     </body>
