--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!--CHRISTMAS-->
         <script src="/res/private/counter.js"></script>
         <link rel="stylesheet" type="text/css" href="/res/private/feed.css">
-<div class="feeditem">
+<div class="feeditem" style="display:none;">
     <a class="link" href="#">
         <b><div class="title">COUNTDOWN TO CHRISTMAS</div></b>
     </a>
