--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@ permalink: /404.html
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="res/global/styles.css">
+        <link rel="stylesheet" type="text/css" href="/res/global/styles.css">
         <link rel="shortcut icon" type="image/png" href="/res/media/images/favicon.png"/>
         <title>DusterTheFirst</title>
         <script src="/res/global/jquery-3.1.1.js"></script>
@@ -33,7 +33,7 @@ permalink: /404.html
         <div id="header"></div>
         <div id="headerspacer" class="desktop">&nbsp;</div>
         <div id="headerspacer" class="mobile">&nbsp;</div>
-        <script src="res/include/headerinclude.js"></script>
+        <script src="/res/include/headerinclude.js"></script>
 <!--        /HEADER-->
         <div id="fourofour">
             <div id="msg">
