--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCKTYPE html>
 <html>
     <head>
+        <meta name="google-site-verification" content="65GibD4QQxKoekbNGzEAyDigXPHcTp-0W_gE4Tr6Kyk" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="res/global/styles.css">
         <link rel="shortcut icon" type="image/png" href="/res/media/images/favicon.png"/>
