--- a/palabras/index.html
+++ b/palabras/index.html
@@ -8,6 +8,12 @@
         <title>DusterTheFirst - Palabras Del Día</title>
         <script src="/res/global/jquery-3.1.1.js"></script>
     </head>
+    <style>
+        a{
+            color: blueviolet;
+            text-decoration: none;
+        }
+    </style>
     <body>
 <!--        HEADER-->
         <div id="header"></div>
@@ -29,9 +35,10 @@
             </a>
             <hr>
             <div class="feedcontent">
-                <h4>This Is Updated Approxamently Once Every 2 Weeks</h4>
-                <a href="Palabras%20Del%20D%C3%ADa.docx" download>Microsoft Word</a>
-                <a href="Palabras%20Del%20D%C3%ADa.pdf" download>PDF</a>
+                <h4>Updated On <i>Wednesday, March 1, 2017</i></h4>
+                <hr>
+                <a href="Palabras%20Del%20D%C3%ADa.docx" download>Microsoft Word</a><br>
+                <a href="Palabras%20Del%20D%C3%ADa.pdf" download>PDF</a><br>
                 <a href="PalabrasDelD%C3%ADa.html" download>HTML</a>
             </div>
         </div>
