--- a/palabras/index.html
+++ b/palabras/index.html
@@ -37,9 +37,9 @@
             <div class="feedcontent">
                 <h4>Updated On <i>Wednesday, March 1, 2017</i></h4>
                 <hr>
-                <a href="Palabras%20Del%20D%C3%ADa.docx" download>Microsoft Word</a><br>
-                <a href="Palabras%20Del%20D%C3%ADa.pdf" download>PDF</a><br>
-                <a href="PalabrasDelD%C3%ADa.html" download>HTML</a>
+                <a href="PDD.docx" download>Microsoft Word</a><br>
+                <a href="PDD.pdf" download>PDF</a><br>
+                <a href="PDD.html" download>HTML</a>
             </div>
         </div>
     </body>
