--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCKTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta name="google-site-verification" content="65GibD4QQxKoekbNGzEAyDigXPHcTp-0W_gE4Tr6Kyk" />
