--- a/palabras/index.html
+++ b/palabras/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta name="google-site-verification" content="65GibD4QQxKoekbNGzEAyDigXPHcTp-0W_gE4Tr6Kyk" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="/res/global/styles.css">
-        <link rel="shortcut icon" type="image/png" href="/res/media/images/favicon.png"/>
+        <link rel="stylesheet" type="text/css" href="../res/global/styles.css">
+        <link rel="shortcut icon" type="image/png" href="../res/media/images/favicon.png"/>
         <title>DusterTheFirst - Palabras Del Día</title>
-        <script src="/res/global/jquery-3.1.1.js"></script>
+        <script src="../res/global/jquery-3.1.1.js"></script>
     </head>
     <style>
         a{
@@ -19,7 +19,7 @@
         <div id="header"></div>
         <div id="headerspacer" class="desktop">&nbsp;</div>
         <div id="headerspacer" class="mobile">&nbsp;</div>
-        <script src="/res/include/headerinclude.js"></script>
+        <script src="../res/include/headerinclude.js"></script>
 <!--        /HEADER-->
 <!--        JUMBOTRON-->
         <div id="minitron">
@@ -28,17 +28,17 @@
             </div>
         </div>
 <!--        /JUMBOTRON-->
-        <link rel="stylesheet" type="text/css" href="/res/private/feed.css">
+        <link rel="stylesheet" type="text/css" href="../res/private/feed.css">
         <div class="feeditem">
             <a class="link">
                 <b><div class="title">Download The Palabras List Here</div></b>
             </a>
             <hr>
             <div class="feedcontent">
-                <h4>Updated On <i>Wednesday, March 1, 2017</i></h4>
+                <h4>Updated On <i>Friday, April 28, 2017</i></h4>
                 <hr>
                 <a href="PDD.docx" download>Microsoft Word</a><br>
-                <a href="PDD.pdf" download>PDF</a><br>
+                <a href="PDD.pdf" download>PDF (Recommended)</a><br>
                 <a href="PDD.html" download>HTML</a>
             </div>
         </div>
