--- a/404.html
+++ b/404.html
@@ -21,6 +21,7 @@ permalink: /404.html
                 width: 100%;
             }
             #msg{
+                margin: 20px;
                 color: firebrick;
             }
             #help{
@@ -38,11 +39,10 @@ permalink: /404.html
         <div id="fourofour">
             <div id="msg">
                 <h1>404</h1>
-                <h1>Page Not Found</h1>
+                <h1>Page not found</h1>
             </div>
             <div id="help">
-                <span id="page"></span> Is Not On This Webserver, Check Your Spelling And Try Again
-                <br>
+                <span id="page"></span> is not on this webserver, check your spelling and try again
             </div>
             <script>$("#page").text(window.location.pathname)</script>
         </div>
