--- a/about.html
+++ b/about.html
@@ -25,27 +25,32 @@
         <link rel="stylesheet" type="text/css" href="/res/private/feed.css">
         <div class="feeditem">
             <a class="link">
-                <b><div class="title">This Page</div></b>
+                <b><div class="title">This page</div></b>
             </a>
             <hr>
-            <div class="feedcontent">I Developed This Page To Practice HTML, CSS and JS/<br>
-            The Images On The Jumbotrons Were All Made By Martin Driver<br>
-            I Wrote All Of The Code Except The JQuery Library.<br>
-            The Color Scheme Is Based Off Of Google Search Results On Mobile, Cuz Why Not.</div>
+            <div class="feedcontent">
+                I developed this page to practice HTML, CSS and JS<br>
+                I wrote all of the code, except for the JQuery library.<br>
+                The color scheme is based off of Google search results on mobile, cuz why not.
+            </div>
         </div>
         <div class="feeditem">
             <a class="link">
                 <b><div class="title">Programming</div></b>
             </a>
             <hr>
-            <div class="feedcontent">I Am A Student Developer And I Program All Of My Programs Or Websites In My Free Time, I Am By No Means A Professional</div>
+            <div class="feedcontent">
+                I am a student developer and I program everything in my free time, I am by no means a professional
+            </div>
         </div>
         <div class="feeditem">
             <a class="link">
-                <b><div class="title">Arts</div></b>
+                <b><div class="title">Website development</div></b>
             </a>
             <hr>
-            <div class="feedcontent">Sometimes I Will Make A Piece Of "Art" Like A Song Or A Drawing.</div>
+            <div class="feedcontent">
+                I offer my services in web development.
+            </div>
         </div>
 <!--        /CONTENT-->
     </body>
