--- a/contact.html
+++ b/contact.html
@@ -28,28 +28,21 @@
                 <b><div class="title">Email</div></b>
             </a>
             <hr>
-            <div class="feedcontent">Email Me At DusterTheFirst@gmail.com</div>
+            <div class="feedcontent">you can email me at dusterTheFirst@gmail.com</div>
         </div>
         <div class="feeditem">
             <a class="link">
-                <b><div class="title">Social Media</div></b>
+                <b><div class="title">Social media</div></b>
             </a>
             <hr>
-            <div class="feedcontent">Mostly All Of My Social Meda Names Are Either @dusterthefirst or @dusterthesecond</div>
+            <div class="feedcontent">I can be reached on several social media platforms with the name of <i>@Dusterthefirst</i>, i would not seggest this as the only mean of contact though, for I am rarely on</div>
         </div>
         <div class="feeditem">
             <a class="link">
-                <b><div class="title">Business Inquiries</div></b>
+                <b><div class="title">Discord</div></b>
             </a>
             <hr>
-            <div class="feedcontent">Email Me At DusterTheFirst@outlook.com</div>
-        </div>
-        <div class="feeditem">
-            <a class="link">
-                <b><div class="title">Programming Advice Or Assistance</div></b>
-            </a>
-            <hr>
-            <div class="feedcontent">Email Me At DusterTheFirst@outlook.com or Skype Me At DusterTheFirst</div>
+            <div class="feedcontent">I can be reached at <i>DusterTheFirst#4191</i></div>
         </div>
 <!--        /CONTENT-->
     </body>
