--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="shortcut icon" type="image/png" href="/res/media/images/favicon.png"/>
         <title>DusterTheFirst</title>
         <script src="/res/global/jquery-3.1.1.js"></script>
+        <script src="https://widget.battleforthenet.com/widget.js" async></script>
     </head>
     <body>
 <!--        HEADER-->
